# televoice

./: Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
