[tool.poetry]
name = "televoice"
version = "0.1.0"
description = ""
authors = ["Stas Cartoon <bycs@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "2.24"
SpeechRecognition = "3.9.0"
pydub = "0.25.1"

[tool.poetry.dev-dependencies]
black = "22.12.0"
flake8 = "5.0.4"
flake8-black = "0.3.6"
flake8-builtins = "2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
